tests/baselines/reference/contextualTyping24.errors.txt
tests/cases/compiler/contextualTyping24.ts(1,55): error TS2322: Type '(this: 无值, a: 文字) => 数字' is not assignable to type '(a: { (): 数字; (i: 数字): 数字; }) => 数字'.
  Types of parameters 'a' and 'a' are incompatible.
    Type '{ (): 数字; (i: 数字): 数字; }' is not assignable to type '文字'.


==== tests/cases/compiler/contextualTyping24.ts (1 errors) ====
    var foo:(a:{():number; (i:number):number; })=>number; foo = function(this: void, a:string){return 5};
                                                          ~~~
!!! error TS2322: Type '(this: 无值, a: 文字) => 数字' is not assignable to type '(a: { (): 数字; (i: 数字): 数字; }) => 数字'.
!!! error TS2322:   Types of parameters 'a' and 'a' are incompatible.
!!! error TS2322:     Type '{ (): 数字; (i: 数字): 数字; }' is not assignable to type '文字'.